@@ -1,3 +1,9 @@
+2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* main.c: fix indentation; allocate an array of NULL-terminated string
+	to be passed to the clone commands; fix command-line options parsing;
+	add a "-V|--version" option (shows the version of gnome-system-log).
+
 2006-01-21  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* help/C/gnome-system-log.xml: fix the manual's title and abstract
